[project]
name = "raspberry-pi-mesh-weather"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "luma.oled>=3.15.0",
    "meshcore>=2.3.7",
    "paho-mqtt>=2.1.0",
    "pimoroni-bme280>=1.0.0",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "rpi-bme280>=0.2.4",
    "RPi.GPIO>=0.7.1",
    "smbus2>=0.6.1",
    "spidev>=3.8",
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
]

[project.scripts]
daemon = "raspberry_pi_mesh_weather.daemon:main"

