[project]
name = "raspberry-pi-mesh-weather"
version = "1.0.0"
description = "Application to provide additional functionality on Mesh networks"
requires-python = ">=3.12"
dependencies = [
    "paho-mqtt>=2.1.0",
    "pyjwt>=2.13.0",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "RPi.GPIO>=0.7.1",
    "smbus2>=0.6.1",
    "spidev>=3.8",
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
]
radio-meshcore = [
    "meshcore>=2.3.7",
]
radio-meshtastic = [
    "meshtastic>=2.7.9",
]
sensor-bme280 = [
    "pimoroni-bme280>=1.0.0",
    "rpi-bme280>=0.2.4",
]
display-sh1106 = [
    "luma.oled>=3.15.0",
]

[project.scripts]
daemon = "raspberry_pi_mesh_weather.daemon:main"

